[package]
name = "math_util"
version = "0.1.0"
authors = ["Nicholas Comendant <nicholas.comendant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
round = "0.1.2"
# rand = "0.8"

[dev-dependencies]
rand = "0.8"