[package]
name = "math_util"
version = "0.1.0"
authors = ["Nicholas Comendant <nicholas.comendant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
round = "0.1.2"
ts-rs = "6.1"

[dev-dependencies]
rand = "0.8"